--- a/css/default.css
+++ b/css/default.css
@@ -12,12 +12,23 @@
   --danger: #ff8b8d;
   --grad-1: #a1ecff;
   --grad-2: #7dbcff;
+
+  --size-10: 0.625rem;
+  --size-14: 0.875rem;
+  --size-16: 1rem;
+  --size-18: 1.125rem;
+  --size-20: 1.25rem;
+  --size-30: 1.875rem;
+  --size-40: 2.5rem;
+  --size-50: 3.125rem;
+  --size-100: 6.25rem;
+  --size-150: 9.375rem;
 }
 
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
-  font-size: 0.875rem;
+  font-size: var(--size-14);
   line-height: 1.6;
   letter-spacing: 0;
   color: var(--font-color-base);
@@ -46,7 +57,7 @@ p {
 }
 
 h2 {
-  font-size: 1.75rem;
+  font-size: var(--size-30);
   font-weight: 500;
   line-height: 1.2;
 }
@@ -75,17 +86,25 @@ img {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  padding: 0.4375rem 1.5rem;
   border-radius: 1.25rem;
   transition: ease-in-out 0.3s;
+}
+
+.btn-primary {
+  background-image: linear-gradient(90deg, var(--grad-1), var(--grad-2));
+  color: var(--white);
+  box-shadow: 0px 10px 20px rgba(161, 236, 255, 0.5);
+  border: 1px solid var(--grad-1);
 }
 
 .btn-white {
   background-color: var(--white);
   color: var(--font-color-link);
   box-shadow: 0px 10px 20px rgba(255, 255, 255, 0.35);
-  padding: 0.475rem 1.75rem;
 }
+
+
 
 @media (min-width: 1200px) {
   .container {
