--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 
 .navbar-brand {
   margin-right: auto;
-  font-size: 2rem;
+  font-size: var(--size-30);
   font-weight: 700;
   width: 100%;
   transition: ease-in-out 0.3s;
@@ -70,5 +70,38 @@
 
 .hero-header {
   color: var(--white);
+}
+
+.why-me {
+  padding: var(--size-100) 0;
+}
+
+.why-me-wrapper {
+  display: flex;
+  align-items: center;;
+}
+
+.why-me-wrapper div {
+  flex: 1;
+}
+
+.block-text {
+  padding-right: var(--size-50);
+}
+
+.block-text span {
+  color: var(--font-color-dark);
+  font-family: 'Hind', sans-serif;
+  font-weight: 300;
+}
+
+.block-text h2 {
+  margin-top: 0.5rem;
+  margin-bottom: var(--size-20);
+  color: var(--font-color-dark);
+  font-size: var(--size-40);
+  font-weight: 600;
+  font-family: "Hind", sans-serif;
+  line-height: 1.3;
 }
 
