--- a/css/default.css
+++ b/css/default.css
@@ -108,7 +108,12 @@ img {
 
 @media (min-width: 1200px) {
   .container {
-    width: 1140px;
+    max-width: 1140px;
   }
 }
 
+@media (min-width: 768px) {
+  .pricing-table {
+    max-width: 720px;
+  }
+}
