--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,71 @@ span.bg-color-6 {
 }
 
 /* Pricing Styling */
+.pricing-table {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(215px, 1fr));
+  gap: var(--size-18);
+  margin: auto;
+  align-items: flex-start;
+  margin-top: var(--size-100);
+}
+
 .block-text.pricing-header {
   text-align: center;
   padding-right: 0;
+}
+
+.price-card {
+  background-color: var(--white);
+  border-radius: 8px;
+  padding: var(--size-16);
+}
+
+.price-card.featured {
+  box-shadow: 0 10px 20px rgba(82, 179, 255, .2);
+  margin-top: -1rem;
+}
+
+.price-card h3 {
+  margin-top: var(--size-40);
+  font-size: var(--size-18);
+  color: var(--font-color-dark);
+  font-weight: 600;
+}
+
+.price {
+  color: var(--font-color-link);
+  font-size: var(--size-30);
+  font-weight: 600;
+}
+
+.price-card h3,
+.price-card .price,
+.price-card .billed {
+  text-align: center;
+}
+
+.price-card hr {
+  margin: 2rem 0 1rem;
+}
+
+.features li {
+  margin-bottom: var(--size-20);
+}
+
+.price-card .icon {
+  float: right;
+  font-weight: 600;
+}
+
+.price-card .checked {
+  color: var(--success);
+}
+
+.price-card .times {
+  color: var(--danger);
+}
+
+.price-card .btn-wrapper {
+  text-align: center;
 }
