--- a/css/styles.css
+++ b/css/styles.css
@@ -276,9 +276,22 @@ span.bg-color-6 {
 }
 
 /* Testimonial Styling */
+.testimonials {
+  margin-bottom: var(--size-100);
+}
+
+.testimonial-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: 1fr 1fr;
+  gap: var(--size-20);
+  margin: 0 auto;
+}
+
 .testimonials .block-text {
   padding-right: 0;
   text-align: center;
+  margin: var(--size-100) 0;
 }
 
 .testimonial-card {
@@ -287,16 +300,29 @@ span.bg-color-6 {
   padding: var(--size-30);
 }
 
+.testimonial-card.lg {
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+}
+
+.testimonial-card.md .bottom p{
+  font-size: var(--size-14);
+}
+
 .testimonial-card .top {
   display: flex;
   align-items: center;
   padding-bottom: var(--size-10);
 }
 
-.testimonial-card img {
-  width: 70px;
+.testimonial-card img.profile {
+  width: 4.375rem;
   border-radius: 50%;
   margin-right: var(--size-20);
+}
+
+.testimonial-card.lg img.profile {
+  width: 5rem;
 }
 
 .top h4 {
@@ -310,4 +336,10 @@ span.bg-color-6 {
   margin: 0;
   font-size: var(--size-16);
   line-height: 1.6;
+}
+
+.bottom .quote {
+  width: 70px;
+  float: right;
+  margin-top: var(--size-16);
 }
