--- a/css/default.css
+++ b/css/default.css
@@ -25,6 +25,10 @@
   --size-150: 9.375rem;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
@@ -106,15 +110,24 @@ img {
 
 
 
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
-}
+
 
 @media (min-width: 768px) {
   .pricing-table,
-  .testimonial-grid {
+  .testimonial-grid,
+  .footer-bottom-wrapper {
     max-width: 720px;
+  }
+
+@media (min-width: 992px) {
+  footer .container {
+    max-width: 960px;
+  }
+}
+
+  @media (min-width: 1200px) {
+    .container {
+      max-width: 1140px;
+    }
   }
 }
