--- a/css/styles.css
+++ b/css/styles.css
@@ -343,3 +343,121 @@ span.bg-color-6 {
   float: right;
   margin-top: var(--size-16);
 }
+
+/* Footer Styling */
+.bg-footer {
+  background-color: var(--footer);
+}
+
+footer .footer-top {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: var(--size-50);
+  padding: var(--size-100) 0;
+}
+
+footer .footer-col {
+  justify-self: center;
+}
+
+.contact-info {
+  margin-bottom: var(--size-10);
+}
+
+.contact-info li {
+  color: var(--white);
+  margin-bottom: var(--size-10);
+}
+
+.contact-info li i {
+  width: var(--size-30);
+}
+
+.social-icons ul li {
+  display: inline-block;
+  margin-right: var(--size-16);
+}
+
+.social-icons ul li a {
+  color: var(--white);
+  font-size: var(--size-16);
+}
+
+.footer-col h5 {
+  color: var(--white);
+  font-weight: 500;
+  margin-bottom: var(--size-16);
+}
+
+.services-wrapper p {
+  color: #858497;
+}
+
+.recent-posts {
+  display: flex;
+  align-items: center;
+  margin-bottom: var(--size-10);
+}
+
+.recent-posts .post-img-wrapper {
+  width: var(--size-150);
+  margin-right: var(--size-20);
+}
+
+.recent-posts h6 {
+  margin: 0;
+}
+
+.post-inner a {
+  color: var(--white);
+  font-weight: 600;
+  font-size: var(--size-14);
+}
+
+.post-inner span {
+  color: #858497;
+  font-size: var(--size-10);
+}
+
+footer .footer-bottom {
+  background-color: var(--footer-base);
+  padding: var(--size-16) 0;
+}
+
+.footer-bottom-wrapper {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  flex-wrap: wrap;
+}
+
+.copyright p {
+  color : var(--font-color-light);
+}
+
+.footer-bottom-links ul li {
+  display: inline-block;
+  margin-right: var(--size-20);
+}
+
+.footer-bottom-links ul li a{
+  color: var(--white);
+}
+
+/* Scroll to Top Styling */
+#scrollUp {
+  background-image: linear-gradient(135deg, #9ccdfe 0%, #94aafd 100%);
+  background-color: transparent;
+  color: var(--white);
+  font-size: var(--size-30);
+  height: var(--size-50);
+  width: var(--size-50);
+  line-height: var(--size-50);
+  position: fixed;
+  bottom: var(--size-30);
+  right: var(--size-30);
+  text-align: center;
+  border-radius: 8px;
+  cursor: pointer;
+  z-index: 100;
+}
