--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,16 @@
   transition: ease-in-out 0.3s;
 }
 
+.navbar.sticky {
+  background-color: var(--white);
+  box-shadow: 0px 0px 20px rgba(48, 63, 100, 0.2);
+}
+
+.navbar.sticky .navbar-toggler span,
+.navbar.sticky .navbar-brand {
+  color: var(--font-color-dark);
+}
+
 .navbar-toggler {
   position: absolute;
   right: var(--size-20);
@@ -22,6 +32,7 @@
   color: var(--white);
   font-size: var(--size-20);
   cursor: pointer;
+  pointer-events: none;
 }
 
 [aria-controls="navbarDropdown"] {
@@ -53,8 +64,8 @@
   font-weight: 600;
   font-family: "Hind", sans-serif;
   text-transform: uppercase;
-  margin-right: 2.5rem;
-  line-height: 1.25rem;
+  margin-right: var(--size-40);
+  line-height: var(--size-20);
 }
 
 /* Header Styling */
