--- a/css/responsive.css
+++ b/css/responsive.css
@@ -31,10 +31,34 @@
   footer .footer-col:nth-child(3) {
     grid-column: 1 / 3;
   }
+}
 
+/* Mobile Phone */
+@media screen and (max-width: 480px) {
+  .hero-wrapper {
+    text-align: center;
+  }
+  
+  .why-me-wrapper {
+    flex-wrap: wrap;
+    text-align: center;
+  }
 
+  .why-me-wrapper > div {
+    flex: initial;
+  }
 
+  .why-me-wrapper .block-text {
+    padding-right: 0;
+  }
 
+  footer .footer-col:nth-child(1) {
+    order: 3;
+  }
+
+  footer .footer-col:nth-child(3) {
+    grid-column: initial;
+  }
 
 
 
